2003-01-16  Yoshinori K. Okuji  <okuji@enbug.org>

	From H.J. Lu <hjl@gnu.org>:
	* stage2/disk_io.c (part_start): Use unsigned long to support
	large disks.
	(part_length): Likewise.
	* stage2/shared.h (part_start): Likewise.
	(part_length): Likewise.

2003-01-05  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.in (CFLAGS): When the default CFLAGS is used,
	eliminate -O2 and -g from CFLAGS, because Autoconf may
	automatically set CFLAGS to them.

2003-01-02  Yoshinori K. Okuji  <okuji@enbug.org>

	From Jeremy Katz:
	* configure.in: Support building on x86_64 with gcc -m32.

2003-01-02  Yoshinori K. Okuji  <okuji@enbug.org>

	From Jeremy Katz:
	* stage2/fsys_ext2fs.c (ext2fs_dir): Initialize STR_CHK to shut
	up GCC.
	* stage2/fsys_minix.c (minix_dir): Likewise.

2002-12-21  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/asm.S (gateA20): First, try a BIOS call (INT 15H,
	AX=2400/2401). Use the keyboard controller, only if that failed.

2002-12-11  Yoshinori K. Okuji  <okuji@enbug.org>

	Add a workaround for buggy BIOSes which don't pass boot drive
	correctly. The idea is that GRUB forces the fixed disk flag
	when booted from a hard disk. When BIOS loads GRUB directly,
	the boot drive must be either of 0x00 and 0x80, so this should
	work, if those BIOSes always pass zero to %dl. AFAIK, this
	assumption is always correct.

	* stage2/builtins.c (install_func): Store the fixed disk flag of
	the destination drive in BOOT_DRIVE_MASK in Stage 1.

	* stage1/stage1.h (STAGE1_BOOT_DRIVE_MASK): New macro.

	* stage1/stage1.S (boot_drive_mask): New variable. It is or'ed
	to %dl.

2002-12-09  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/char_io.c (init_page): Change the software name from
	"GRUB" to "GNU GRUB". This was inaccurate. Reported by Ciaran
	O'Riordan <coriordan@compsoc.com>.

2002-12-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (embed_func): When checking if the disk can
	store Stage 1.5, check every partition, if it isn't empty.
