@@ -60,6 +60,7 @@ Josip Rodin <joy@cibalia.gkvk.hr>
 Julien Bordet <julien.bordet@int-evry.fr>
 Julien Perrot <julien.perrot@iie.cnam.fr>
 Kalle Olavi Niemitalo <tosi@ees2.oulu.fi>
+Karsten Scheibler <karsten.scheibler@student.uni-halle.de>
 Khimenko Victor <grub@khim.sch57.msk.ru>
 Klaus Reichl <klaus.reichl@alcatel.at>
 Kristoffer Branemyr <ztion@swipnet.se>
